sort.basic.cocktail.AlgCocktailSort3.scala.error
Compilation error:
AlgCocktailSort3:8: error: '(' expected but identifier found.
    if isSmaller(i,i+1)==(false) {
       ^AlgCocktailSort3:19: error: '(' expected but identifier found.
    if isSmaller(i,i+1)==(false) {
       ^